apps/romm/namespace-emulation.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: emulation
  annotations:
    volsync.backube/privileged-movers: "true"
