apps/romm/deployment-mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: romm-db
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: romm-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: romm-db
    spec:
      containers:
        - name: romm-db
          image: mariadb:latest
          resources:
            requests:
              memory: 290Mi
          livenessProbe:
            exec:
              command:
                - healthcheck.sh
                - --connect
                - --innodb_initialized
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
      restartPolicy: Always
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: romm-mysql
