apps/romm/deployment-romm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: romm
  name: romm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: romm
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: romm
    spec:
      enableServiceLinks: false # Disables injection of environment variables for services https://docs.romm.app/4.1.6/Troubleshooting/Kubernetes-Issues/
      restartPolicy: Always
      containers:
        - name: romm
          image: rommapp/romm:5.3
          resources:
            requests:
              memory: 1Gi
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 2
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /redis-data
              name: romm-redis-data
            - mountPath: /romm/library
              name: rom-library
            - mountPath: /romm/config
              name: romm-data
              subPath: config
            - mountPath: /romm/resources
              name: romm-data
              subPath: resources
            - mountPath: /romm/assets
              name: romm-data
              subPath: assets
      volumes:
        - name: romm-data
          persistentVolumeClaim:
            claimName: romm-data
        - name: romm-redis-data
          persistentVolumeClaim:
            claimName: romm-redis
        - name: rom-library
          persistentVolumeClaim:
            claimName: rom-library
