apps/romm/service-romm-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: romm-db
  name: romm-mariadb
spec:
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  selector:
    app: romm-db
