apps/romm/service-romm.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: romm
  name: romm
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: romm
